--- a/index.mdx
+++ b/index.mdx
@@ -11,11 +11,20 @@ This project supports a Neo4j backend to manage and query the graph data, provid
 
 ## Key Features
 
--   **Ontology-Driven**: Define your knowledge domain with simple YAML files. a1facts uses this ontology to automatically create the tools and structures needed to interact with your data.
--   **Verifiable Ingestion**: Convert unstructured knowledge into structured entities and relationships within your knowledge graph, ensuring data quality and consistency.
--   **Natural Language Queries**: Ask questions in plain English. a1facts translates your queries into precise graph traversals to retrieve the information you need.
--   **Reliable AI Agents**: Build AI agents that can provide accurate and trustworthy answers by grounding them in the factual data of the knowledge graph.
--   **Neo4j Backend**: Supports Neo4j for efficient storage and complex querying of your knowledge base.
+<CardGroup cols={2}>
+  <Card title="Ontology-Driven" icon="sitemap">
+    Define your knowledge domain with simple YAML files. a1facts uses this ontology to automatically create the tools and structures needed to interact with your data.
+  </Card>
+  <Card title="Verifiable Ingestion" icon="check-double">
+    Convert unstructured knowledge into structured entities and relationships within your knowledge graph, ensuring data quality and consistency.
+  </Card>
+  <Card title="Natural Language Queries" icon="language">
+    Ask questions in plain English. a1facts translates your queries into precise graph traversals to retrieve the information you need.
+  </Card>
+  <Card title="Reliable AI Agents" icon="robot">
+    Build AI agents that can provide accurate and trustworthy answers by grounding them in the factual data of the knowledge graph.
+  </Card>
+</CardGroup>
 
 ## Usage Scenario: Building AI Agents with Precise Answers
 
@@ -23,17 +32,20 @@ In many applications, it's critical for AI agents to provide answers that are no
 
 a1facts addresses this problem by grounding your AI agent in a knowledge graph. Here's how it works:
 
-1.  **Define Your Domain**: You start by creating an ontology that describes the key concepts and relationships in your specific domain. For example, in finance, you might define entities like `Company`, `Product`, and `Market`, and relationships like `competes_with` or `operates_in`.
-
-    <img src="/images/Onto_example.png" />
-
-2.  **Populate the Graph**: You then ingest data from different sources into the knowledge graph. This could be from internal documents, databases, external APIs, or the web. a1facts ensures that this data is structured according to your ontology, but also that it's factual by triangulating facts from different sources.
-
-    <img src="/images/example_KG.png" />
-
-3.  **Query with Confidence**: When your AI agent receives a question, it doesn't just rely on its internal training data. Instead, it uses a1facts to query the knowledge graph. This means the agent's answers are based on the structured, verified data.
-
-    <img src="/images/Query_example.jpeg" />
+<Steps>
+    <Step title="1. Define Your Domain">
+        You start by creating an ontology that describes the key concepts and relationships in your specific domain. For example, in finance, you might define entities like `Company`, `Product`, and `Market`, and relationships like `competes_with` or `operates_in`.
+        <img src="/images/Onto_example.png" />
+    </Step>
+    <Step title="2. Populate the Graph">
+        You then ingest data from different sources into the knowledge graph. This could be from internal documents, databases, external APIs, or the web. a1facts ensures that this data is structured according to your ontology, but also that it's factual by triangulating facts from different sources.
+        <img src="/images/example_KG.png" />
+    </Step>
+    <Step title="3. Query with Confidence">
+        When your AI agent receives a question, it doesn't just rely on its internal training data. Instead, it uses a1facts to query the knowledge graph. This means the agent's answers are based on the structured, verified data.
+        <img src="/images/Query_example.jpeg" />
+    </Step>
+</Steps>
 
 By using a1facts, you can build an AI agent that is not only intelligent but also trustworthy, providing precise and reliable answers every time.
 
