--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,49 +3,49 @@ title: "Quickstart"
 description: "Follow these steps to get the a1facts Knowledge Graph running on your local machine."
 ---
 
-## Prerequisites
+<Steps>
+    <Step title="Prerequisites">
+        -   Python 3.13+
+        -   [uv](https://github.com/astral-sh/uv) - An extremely fast Python package installer.
+        -   Optional: A running Neo4j Database instance.
+    </Step>
+    <Step title="Installation">
+        1.  **Clone the repository:**
+            ```bash
+            git clone https://github.com/shadi-fsai/a1facts.git
+            cd a1facts/lib
+            ```
 
--   Python 3.13+
--   [uv](https://github.com/astral-sh/uv) - An extremely fast Python package installer.
--   Optional: A running Neo4j Database instance.
+        2.  **Create a virtual environment and install dependencies:**
+            ```bash
+            # Create the virtual environment
+            uv venv
+            
+            # Activate the virtual environment
+            # On Windows: .venv\Scripts\activate
+            # On macOS/Linux: source .venv/bin/activate
+            .venv\Scripts\activate
 
-## Installation
+            # Install dependencies
+            uv pip install -e .
+            ```
+    </Step>
+    <Step title="Configuration">
+        You'll need to provide credentials to connect to your Neo4j database and other services.
 
-1.  **Clone the repository:**
-    ```bash
-    git clone https://github.com/shadi-fsai/a1facts.git
-    cd a1facts/lib
-    ```
-
-2.  **Create a virtual environment and install dependencies:**
-    ```bash
-    # Create the virtual environment
-    uv venv
-    
-    # Activate the virtual environment
-    # On Windows: .venv\Scripts\activate
-    # On macOS/Linux: source .venv/bin/activate
-    .venv\Scripts\activate
-
-    # Install dependencies
-    uv pip install -e .
-    ```
-
-## Configuration
-
-You'll need to provide credentials to connect to your Neo4j database and other services.
-
-1.  Create a `.env` file in the root of the project.
-2.  Add your API keys to the file:
-    ```
-    OPENAI_API_KEY="your_openai_api_key"
-    EXA_API_KEY="your_exa_api_key"
-    ```
-3.  Optionally if you want to use neo4j add the following to the .env file
-```
-    NEO4J_URI="bolt://localhost:7687"
-    NEO4J_AUTH="your_neo4j_password"
-```
+        1.  Create a `.env` file in the root of the project.
+        2.  Add your API keys to the file:
+            ```
+            OPENAI_API_KEY="your_openai_api_key"
+            EXA_API_KEY="your_exa_api_key"
+            ```
+        3.  Optionally if you want to use neo4j add the following to the .env file
+        ```
+            NEO4J_URI="bolt://localhost:7687"
+            NEO4J_AUTH="your_neo4j_password"
+        ```
+    </Step>
+</Steps>
 
 ## Privacy Notice
 
