--- a/development.mdx
+++ b/development.mdx
@@ -1,94 +1,37 @@
 ---
-title: 'Development'
-description: 'Preview changes locally to update your docs'
+title: 'Development & Contributing'
+description: 'Learn how to contribute to the a1facts project.'
 ---
 
-<Info>
-  **Prerequisites**:
-  - Node.js version 19 or higher
-  - A docs repository with a `docs.json` file
-</Info>
+First off, thank you for considering contributing to a1facts! It's people like you that make this project great.
 
-Follow these steps to install and run Mintlify on your operating system.
+## How Can I Contribute?
 
-<Steps>
-<Step title="Install the Mintlify CLI">
+### Reporting Bugs
 
-```bash
-npm i -g mint
-```
-</Step>
+If you find a bug, please open an issue on our [GitHub repository](https://github.com/shadi-fsai/a1facts/issues) and provide as much information as possible, including:
 
-<Step title="Preview locally">
+- A clear and descriptive title.
+- A detailed description of the problem.
+- Steps to reproduce the issue.
+- Any relevant code snippets or error messages.
 
-Navigate to your docs directory where your `docs.json` file is located, and run the following command:
+### Suggesting Enhancements
 
-```bash
-mint dev
-```
+If you have an idea for a new feature or an enhancement to an existing one, please open an issue to discuss it. This allows us to coordinate our efforts and prevent duplication of work.
 
-A local preview of your documentation will be available at `http://localhost:3000`.
+### Pull Requests
 
-</Step>
-</Steps>
+We welcome pull requests! If you'd like to contribute code, please follow these steps:
 
-## Custom ports
+1. Fork the repository.
+2. Create a new branch for your feature or bug fix.
+3. Make your changes and commit them with a clear and descriptive commit message.
+4. Push your changes to your fork.
+5. Open a pull request to the main repository.
 
-By default, Mintlify uses port 3000. You can customize the port Mintlify runs on by using the `--port` flag. For example, to run Mintlify on port 3333, use this command:
+## Copyright Assignment
 
-```bash
-mint dev --port 3333
-```
+By submitting a pull request to this repository, you agree to assign the copyright of your contribution to the owner of this repository. This ensures that we have the necessary rights to use, modify, and distribute your contribution as part of this project.
 
-If you attempt to run Mintlify on a port that's already in use, it will use the next available port:
-
-```md
-Port 3000 is already in use. Trying 3001 instead.
-```
-
-## Mintlify versions
-
-Please note that each CLI release is associated with a specific version of Mintlify. If your local preview does not align with the production version, please update the CLI:
-
-```bash
-npm mint update
-```
-
-## Validating links
-
-The CLI can assist with validating links in your documentation. To identify any broken links, use the following command:
-
-```bash
-mint broken-links
-```
-
-## Deployment
-
-If the deployment is successful, you should see the following:
-
-<Frame>
-  <img src="/images/checks-passed.png" alt="Screenshot of a deployment confirmation message that says All checks have passed." style={{ borderRadius: '0.5rem' }} />
-</Frame>
-
-## Code formatting
-
-We suggest using extensions on your IDE to recognize and format MDX. If you're a VSCode user, consider the [MDX VSCode extension](https://marketplace.visualstudio.com/items?itemName=unifiedjs.vscode-mdx) for syntax highlighting, and [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) for code formatting.
-
-## Troubleshooting
-
-<AccordionGroup>
-  <Accordion title='Error: Could not load the "sharp" module using the darwin-arm64 runtime'>
-
-    This may be due to an outdated version of node. Try the following:
-    1. Remove the currently-installed version of the CLI: `npm remove -g mint`
-    2. Upgrade to Node v19 or higher.
-    3. Reinstall the CLI: `npm i -g mint`
-  </Accordion>
-
-  <Accordion title="Issue: Encountering an unknown error">
-  
-    Solution: Go to the root of your device and delete the `~/.mintlify` folder. Then run `mint dev` again.
-  </Accordion>
-</AccordionGroup>
-
-Curious about what changed in the latest CLI version? Check out the [CLI changelog](https://www.npmjs.com/package/mintlify?activeTab=versions).
+If you are not comfortable with this arrangement, please do not submit a pull request.
