--- a/index.mdx
+++ b/index.mdx
@@ -3,11 +3,13 @@ title: "Introduction"
 description: "a1facts: The precision layer for AI"
 ---
 
-a1facts is a powerful Python framework that acts as a verifiable knowledge layer for factual, precise AI. It allows you to define a clear structure (ontology) for your domain, ingest verifiyable information from various sources, and use natural language to get precise, reliable answers. By grounding your AI agents in a structured knowledge graph, a1facts helps eliminate hallucinations and ensures that your agent's responses are based on verified facts.
+a1facts is a powerful Python framework that acts as a verifiable knowledge layer for factual, precise AI. It allows you to define a clear structure (ontology) for your domain, ingest verifiable information from various sources, and use natural language to get precise, reliable answers. By grounding your AI agents in a structured knowledge graph, a1facts helps eliminate hallucinations and ensures that your agent's responses are based on verified facts.
 
 This project supports a Neo4j backend to manage and query the graph data, providing a robust and scalable solution for your knowledge management needs.
 
-<img src="/images/Architecture.png" />
+<Frame>
+  <img src="/images/Architecture.png" alt="a1facts Architecture Diagram" />
+</Frame>
 
 ## Key Features
 
@@ -26,27 +28,35 @@ This project supports a Neo4j backend to manage and query the graph data, provid
   </Card>
 </CardGroup>
 
-## Usage Scenario: Building AI Agents with Precise Answers
+## How a1facts Works
 
 In many applications, it's critical for AI agents to provide answers that are not just plausible but also precise and factually correct. Standard large language models (LLMs) can sometimes "hallucinate" or generate incorrect information, which can be a major issue in domains like finance, legal, or scientific research.
 
 a1facts addresses this problem by grounding your AI agent in a knowledge graph. Here's how it works:
 
 <Steps>
-    <Step title="1. Define Your Domain">
+    <Step title="Define Your Domain">
         You start by creating an ontology that describes the key concepts and relationships in your specific domain. For example, in finance, you might define entities like `Company`, `Product`, and `Market`, and relationships like `competes_with` or `operates_in`.
-        <img src="/images/Onto_example.png" />
+        <Frame>
+            <img src="/images/Onto_example.png" alt="Example of an ontology definition in YAML" />
+        </Frame>
     </Step>
-    <Step title="2. Populate the Graph">
+    <Step title="Populate the Graph">
         You then ingest data from different sources into the knowledge graph. This could be from internal documents, databases, external APIs, or the web. a1facts ensures that this data is structured according to your ontology, but also that it's factual by triangulating facts from different sources.
-        <img src="/images/example_KG.png" />
+        <Frame>
+            <img src="/images/example_KG.png" alt="Visualization of a knowledge graph with entities and relationships" />
+        </Frame>
     </Step>
-    <Step title="3. Query with Confidence">
+    <Step title="Query with Confidence">
         When your AI agent receives a question, it doesn't just rely on its internal training data. Instead, it uses a1facts to query the knowledge graph. This means the agent's answers are based on the structured, verified data.
-        <img src="/images/Query_example.jpeg" />
+        <Frame>
+            <img src="/images/Query_example.jpeg" alt="Example of a natural language query and the corresponding graph traversal" />
+        </Frame>
     </Step>
 </Steps>
 
 By using a1facts, you can build an AI agent that is not only intelligent but also trustworthy, providing precise and reliable answers every time.
 
-a1facts is a work in progress, we'd love to hear from you on how you're using it and what you need it to do next.
+<Info>
+  a1facts is a work in progress. We'd love to hear from you on how you're using it and what you need it to do next.
+</Info>
