--- a/development.mdx
+++ b/development.mdx
@@ -1,37 +1,52 @@
 ---
 title: 'Development & Contributing'
-description: 'Learn how to contribute to the a1facts project.'
+description: 'Learn how to contribute to the a1facts project. We welcome bug reports, feature requests, and pull requests!'
 ---
 
-First off, thank you for considering contributing to a1facts! It's people like you that make this project great.
+First off, thank you for considering contributing to a1facts! It's people like you that make this project great. Please read through this guide to learn how you can get involved.
 
-## How Can I Contribute?
+## How to Contribute
 
-### Reporting Bugs
+We welcome contributions in several forms. Here are a few ways you can help:
 
-If you find a bug, please open an issue on our [GitHub repository](https://github.com/shadi-fsai/a1facts/issues) and provide as much information as possible, including:
+<CardGroup>
+    <Card title="Reporting Bugs" icon="bug">
+        If you find a bug, please open an issue on our [GitHub repository](https://github.com/shadi-fsai/a1facts/issues). Provide as much information as possible, including a clear title, a detailed description, and steps to reproduce the issue.
+    </Card>
+    <Card title="Suggesting Enhancements" icon="lightbulb">
+        If you have an idea for a new feature or an improvement, open an issue to discuss it. This helps us coordinate our efforts and prevent duplication of work.
+    </Card>
+    <Card title="Submitting Pull Requests" icon="git-pull-request">
+        If you'd like to contribute code, we'd love to see your pull requests. Follow the steps below to get started with development.
+    </Card>
+</CardGroup>
 
-- A clear and descriptive title.
-- A detailed description of the problem.
-- Steps to reproduce the issue.
-- Any relevant code snippets or error messages.
+## Development Workflow
 
-### Suggesting Enhancements
+<Steps>
+    <Step title="Set Up Your Development Environment">
+        To get started, you'll need to set up a local development environment. Follow the instructions in the [Quickstart](/quickstart) guide to clone the repository and install the dependencies.
+    </Step>
+    <Step title="Create a New Branch">
+        Create a new branch for your feature or bug fix. Use a descriptive name that summarizes your changes.
+        ```bash
+        git checkout -b feature/my-new-feature
+        ```
+    </Step>
+    <Step title="Make Your Changes">
+        Make your changes to the codebase and commit them with a clear and descriptive commit message.
+        ```bash
+        git commit -m "feat: Add my new feature"
+        ```
+    </Step>
+    <Step title="Submit a Pull Request">
+        Push your changes to your fork and open a pull request to the main repository. Please provide a detailed description of your changes in the pull request.
+        ```bash
+        git push origin feature/my-new-feature
+        ```
+    </Step>
+</Steps>
 
-If you have an idea for a new feature or an enhancement to an existing one, please open an issue to discuss it. This allows us to coordinate our efforts and prevent duplication of work.
-
-### Pull Requests
-
-We welcome pull requests! If you'd like to contribute code, please follow these steps:
-
-1. Fork the repository.
-2. Create a new branch for your feature or bug fix.
-3. Make your changes and commit them with a clear and descriptive commit message.
-4. Push your changes to your fork.
-5. Open a pull request to the main repository.
-
-## Copyright Assignment
-
-By submitting a pull request to this repository, you agree to assign the copyright of your contribution to the owner of this repository. This ensures that we have the necessary rights to use, modify, and distribute your contribution as part of this project.
-
-If you are not comfortable with this arrangement, please do not submit a pull request.
+<Info>
+**Contributor License Agreement (CLA):** By submitting a pull request to this repository, you agree to assign the copyright of your contribution to the project owner. This allows us to license the project and your contributions appropriately. If you have any questions, please reach out to us.
+</Info>
