--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,50 +3,62 @@ title: "Quickstart"
 description: "Follow these steps to get the a1facts Knowledge Graph running on your local machine."
 ---
 
+Before you begin, make sure you have the following installed:
+- Python 3.13+
+- [uv](https://github.com/astral-sh/uv) - An extremely fast Python package installer.
+- Optional: A running Neo4j Database instance.
+
 <Steps>
-    <Step title="Prerequisites">
-        -   Python 3.13+
-        -   [uv](https://github.com/astral-sh/uv) - An extremely fast Python package installer.
-        -   Optional: A running Neo4j Database instance.
+    <Step title="Clone the Repository">
+        Open your terminal and run the following commands to clone the repository and navigate into the library directory:
+        ```bash
+        git clone https://github.com/shadi-fsai/a1facts.git
+        cd a1facts/lib
+        ```
     </Step>
-    <Step title="Installation">
-        1.  **Clone the repository:**
-            ```bash
-            git clone https://github.com/shadi-fsai/a1facts.git
-            cd a1facts/lib
-            ```
+    <Step title="Install Dependencies">
+        Next, create a virtual environment and install the required packages.
+        
+        **1. Create the virtual environment:**
+        ```bash
+        uv venv
+        ```
+        
+        **2. Activate the virtual environment:**
+        <Tabs>
+            <Tab title="Windows">
+                ```powershell
+                .venv\Scripts\activate
+                ```
+            </Tab>
+            <Tab title="macOS/Linux">
+                ```bash
+                source .venv/bin/activate
+                ```
+            </Tab>
+        </Tabs>
 
-        2.  **Create a virtual environment and install dependencies:**
-            ```bash
-            # Create the virtual environment
-            uv venv
-            
-            # Activate the virtual environment
-            # On Windows: .venv\Scripts\activate
-            # On macOS/Linux: source .venv/bin/activate
-            .venv\Scripts\activate
-
-            # Install dependencies
-            uv pip install -e .
-            ```
+        **3. Install dependencies:**
+        ```bash
+        uv pip install -e .
+        ```
     </Step>
-    <Step title="Configuration">
+    <Step title="Configure Your Environment">
         You'll need to provide credentials to connect to your Neo4j database and other services.
 
-        1.  Create a `.env` file in the root of the project.
-        2.  Add your API keys to the file:
-            ```
+        1.  Create a `.env` file in the `a1facts/lib` directory.
+        2.  Add your API keys and, optionally, your Neo4j credentials to the file:
+            ```dotenv .env
             OPENAI_API_KEY="your_openai_api_key"
             EXA_API_KEY="your_exa_api_key"
-            ```
-        3.  Optionally if you want to use neo4j add the following to the .env file
-        ```
+
+            # Optional: Add if you want to use Neo4j
             NEO4J_URI="bolt://localhost:7687"
             NEO4J_AUTH="your_neo4j_password"
-        ```
+            ```
     </Step>
 </Steps>
 
-## Privacy Notice
-
-We collect minimal usage statistics (number of times the library is run) to help improve the project. You can opt-out by setting the environment variable `A1FACTS_TELEMETRY_DISABLED=1`.
+<Info>
+**Privacy Notice:** We collect minimal usage statistics (number of times the library is run) to help improve the project. You can opt-out by setting the environment variable `A1FACTS_TELEMETRY_DISABLED=1`.
+</Info>
