--- a/api-reference/knowledge-base.mdx
+++ b/api-reference/knowledge-base.mdx
@@ -38,6 +38,9 @@ kb = KnowledgeBase(
 <ParamField body="use_neo4j" type="bool" default="False">
   If `True`, the knowledge base will use a Neo4j backend. Otherwise, it will use an in-memory graph.
 </ParamField>
+<ParamField body="disable_exa" type="bool" default="False">
+    If `True`, the knowledge base will not use Exa search for knowledge acquisition.
+</ParamField>
 
 ---
 
